Opened 21 months ago

Closed 21 months ago

Last modified 21 months ago

#18425 closed bug (fixed)

System hangs on 3rd icon after upgrade

Reported by: Starcrasher Owned by: waddlesplash
Priority: normal Milestone: R1/beta5
Component: Drivers/USB/XHCI Version: R1/beta4
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

The system is a nightly x64 (hrv57033) running in KVM/QEmu. It is running fine with previous state. Joined are 2 syslogs first boot and after forcing reinit.

usb error xhci -1: Host Controller halted

Will check again after today upgrade.

Attachments (3)

syslog.txt (18.6 KB ) - added by Starcrasher 21 months ago.
Syslog from first boot
syslog-after_reinit.txt (29.3 KB ) - added by Starcrasher 21 months ago.
Syslog after forcing reinitialisation
qemu-config.xml (3.6 KB ) - added by Starcrasher 21 months ago.
XML config file obtained in qemu GUI

Download all attachments as: .zip

Change History (13)

by Starcrasher, 21 months ago

Attachment: syslog.txt added

Syslog from first boot

by Starcrasher, 21 months ago

Attachment: syslog-after_reinit.txt added

Syslog after forcing reinitialisation

comment:1 by waddlesplash, 21 months ago

Component: - GeneralDrivers/USB/XHCI
Owner: changed from nobody to waddlesplash

Appears to be a problem with MSI-X interrupts.

I received a report from X512 about a problem like this, too. I have tested in QEMU without any issues. What is your exact QEMU/KVM configuration?

by Starcrasher, 21 months ago

Attachment: qemu-config.xml added

XML config file obtained in qemu GUI

comment:2 by Starcrasher, 21 months ago

If it can help this is QEMU emulator version 5.2.0 (qemu-5.2.0-4.mga8) on 'regular' Mageia x64.

comment:3 by Starcrasher, 21 months ago

After updating to hrev57038, the VM still hangs with same messages about unhandled interrupt.

As a side note, I have also a nightly on an USB key which is booting without hanging. Perhaps is it a VM driver or configuration problem?

comment:4 by Starcrasher, 21 months ago

In fact, the message could be about real interrupts not MSI ones. I was looking at syslog and I think that I found out why interrupts above 15 are not handled. It seems that APICs are not working and PIC mode only manages up to 15 interrupts. Now the question is: Why APIC failed?

found io-apic with address 0xfec00000, global interrupt base 0, apic-id 0
mapping io-apic 0 at physical address 0xfec00000
io-apic 0 has range 0-23, 24 entries, version 0x00170011, apic-id 0
setting ACPI interrupt model to APIC
failed to put ACPI into APIC interrupt model, ignoring
IRQ routing preparation failed, not configuring io-apics
setting ACPI interrupt model to PIC
setting up x2apic for CPU 1: apic id 1, version 327700

comment:5 by X512, 21 months ago

Reverting XHCI MSI-X patch fix infinite reset problem for me. But even with MSI-X patch most USB devices are working fine.

comment:6 by X512, 21 months ago

The same problem for me, fall back to legacy PIC:

KERN: ACPI: Enabled 7 GPEs in block 00 to 1F
KERN: found io-apic with address 0xfec00000, global interrupt base 0, apic-id 13
KERN: mapping io-apic 0 at physical address 0xfec00000
KERN: io-apic 0 has range 0-23, 24 entries, version 0x00178021, apic-id 13
KERN: found io-apic with address 0xfec01000, global interrupt base 24, apic-id 14
KERN: mapping io-apic 1 at physical address 0xfec01000
KERN: io-apic 1 has range 24-55, 32 entries, version 0x001f8021, apic-id 14
KERN: setting ACPI interrupt model to APIC
KERN: IRQ routing preparation failed, not configuring io-apics
KERN: setting ACPI interrupt model to PIC
Last edited 21 months ago by X512 (previous) (diff)

comment:7 by waddlesplash, 21 months ago

Please retest after hrev57045.

comment:8 by Starcrasher, 21 months ago

After updating to hrev57051 system boots. Thank you

comment:9 by waddlesplash, 21 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed

comment:10 by waddlesplash, 21 months ago

Thanks for testing! I guess there is some problem in our MSI-X implementation. We should investigate that later, probably.

Note: See TracTickets for help on using tickets.