headers/private/kernel/arch/x86/ioapic.h
@@ -11,6 +11,7 @@ struct kernel_args;
 
 bool ioapic_is_interrupt_available(int32 gsi);
 
-void ioapic_init(kernel_args* args);
+void ioapic_preinit(kernel_args* args);
+void ioapic_init();
 
 #endif // _KERNEL_ARCH_x86_IOAPIC_H
